--- a/MLpartTPHousePrediction.ipynb
+++ b/MLpartTPHousePrediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "id": "dc8f4087-9ff9-42cc-be4f-e60e752a7053",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "id": "81f1abb2-26f1-4198-b3b2-733eff38f612",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "[5 rows x 141 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "aced3278-b516-4fd3-b218-5b9462db8558",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "id": "777787de-0cd8-4669-a494-83c905e02183",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "((17276, 140), (17276,), (4320, 140), (4320,))"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (microsoft store)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1113,11 +1113,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "e0b3fa2f3b879b9917669399f4b4bbfb721e24819f5fcffaa0474341e2955fea"
+    "hash": "cce956dd8b59511f520788cd9362dddc117670ac5ef39c9ede8ba85a43b854a0"
    }
   }
  },
